added tabletop libs

--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "name": "eeadoer",
   "version": "0.0.0",
-  "dependencies": {},
+  "dependencies": {
+    "tabletop": "^1.4.2"
+  },
   "repository": {},
   "devDependencies": {
     "grunt": "^0.4.5",
