--- a/bower.json
+++ b/bower.json
@@ -12,7 +12,8 @@
     "angular-route": "^1.3.0",
     "angular-sanitize": "^1.3.0",
     "angular-touch": "^1.3.0",
-    "angular-tabletop": "~0.2.1"
+    "angular-tabletop": "~0.2.1",
+    "angular-filter": "~0.5.5"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
